[package]
name = "dc-ock"
version = "0.3.0"
edition = "2018"
license = "MIT"
license_file = "LICENSE"
description = "A simple reverse polish notation desk calculator"
repository = "https://github.com/lillycat332/dc-rs"
authors = ["Lilly Cham"]
homepage = "https://haskell.gay"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.1"
directories = "4.0.1"