[dependencies]

[package]
name = "dc-ock"
version = "2.0.0"
edition = "2018"
license = "MIT"
license_file = "LICENSE"
description = "A simple reverse polish notation desk calculator library"
repository = "https://github.com/lillycat332/dc-rs"
authors = ["Lilly Cham"]
homepage = "https://haskell.gay"